2019-11-05  Martin Liska  <mliska@suse.cz>

	PR c++/92339
	* fold-const.c (operand_compare::hash_operand): Remove
	FIELD_DECL handling.

2019-11-05  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.h (vrp_bitmap_equal_p): Remove.
	* tree-vrp.c (vrp_bitmap_equal_p): Move before use and make
	static.

2019-11-05  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.c (value_range_base::operator==): Use equal_p to
	properly handle symbolics.
	(range_compatible_p): Remove.

2019-11-04  Kamlesh Kumar  <kamleshbhalui@gmail.com>

	* common.opt (-fabi-version): Document =14.
	* doc/invoke.texi (C++ Dialect Options): Likewise.

2019-11-04  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.c (value_range_base::set): Do not special case pointers.

2019-11-04  Tobias Burnus  <tobias@codesourcery.com>

	* config/gcn/gcn.c (gcn_omp_device_kind_arch_isa): New function.
	(TARGET_OMP_DEVICE_KIND_ARCH_ISA): Redefine to
	gcn_omp_device_kind_arch_isa.
	* config/gcn/t-omp-device: New file.
	* configure.ac: Support gcn for omp_device_property.
	* configure: Regenerate.

2019-11-04  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.h (vrp_val_min): Remove handle_pointers argument.
	(vrp_val_max): Same.
	(vrp_val_is_min): Same.
	(vrp_val_is_max): Same.
	(value_range_base::nonzero_p): Remove last argument to
	vrp_val_is_max.
	* tree-vrp.c (vrp_val_min): Remove handle_pointers argument.
	(vrp_val_max): Same.
	(vrp_val_is_min): Same.
	(vrp_val_is_max): Same.
	(value_range_base::set_varying): Remove last argument to vrp_val*.
	(value_range_base::dump): Same.
	(value_range_base::set): Same.
	(value_range_base::normalize_symbolics): Same.
	(value_range_base::num_pairs): Same.
	(value_range_base::lower_bound): Same.
	(value_range_base::upper_bound): Same.
	(ranges_from_anti_range): Remove handle_pointers argument.
	(value_range_base::singleton_p): Remove last argument to
	ranges_from_anti_range.

2019-11-04  Jan Hubicka  <jh@suse.cz>

	* ipa-reference.c (init_function_info): Initialize